--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./wiss/wiss_template.pdf
-          asset_name: ${{ GITHUB_SHA }}.pdf
+          asset_name: ${{ github.sha }}.pdf
           asset_content_type: application/pdf
 
 # name: build
