chenge tag name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          tag_name: ${{github.ref}}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{github.ref}}-${{ github.sha }}
+          release_name: Release ${{ github.ref }}-${{ github.sha }}
           body: |
-            Compiled PDF ${{github.ref}}
+            Compiled PDF ${{github.ref}}-${{ github.sha }}
           draft: false
           prerelease: false
       # Upload Asset main.pdf
